tests/e2e/semantics/output_assignment_existing_var5.error
Error: syntax error in story at line 3, column 32

3|        when b listen path: "/" as x
                                     ^

E0108: Service output `x` must be unique. Use `as outputName`
