tests/e2e/semantics/output_assignment_existing_var5.story
x = 1
http server as b
    when b listen path: "/" as x
        a = 1
